chore: homepage, projectcard, dashboard
changing alt of image to correct alt , fixing some styles

--- a/src/pages/about/index.astro
+++ b/src/pages/about/index.astro
@@ -1,10 +1,13 @@
 ---
-export const prerender = false;
 import Layout from "../../layouts/Layout.astro";
 ---
 
 <Layout title="About Me">
-  <a href="/api/redirect"> github signin</a>
+  <div>
+    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Numquam, delectus fugiat. Accusantium,
+    animi incidunt tempore voluptatum ipsa eaque officiis quae soluta odio assumenda laborum quos
+    placeat accusamus ratione est possimus.
+  </div>
 </Layout>
 
 <style>
