--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -54,7 +54,7 @@ const techStacksArrFiltered = TECH_STACKS.filter((stack) => techstackArr.include
 
 <div
   class:list={[
-    "group relative size-full flex flex-col justify-around  p-4 shadow-elevate-light backdrop-blur dark:shadow-elevate-dark text-foreground",
+    "group relative size-full flex flex-col justify-around  p-4 shadow-elevate-light dark:shadow-elevate-dark text-foreground",
     className,
     classList,
   ]}
@@ -72,7 +72,7 @@ const techStacksArrFiltered = TECH_STACKS.filter((stack) => techstackArr.include
   <Image
     class:list={["size-full rounded-lg object-cover aspect-video object-center  "]}
     src={profileImg}
-    alt="sample page"
+    alt={projectName}
     inferSize={true}
   />
   <div
