chore: finishing up page for 400 and error page 500

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -65,7 +65,7 @@ const project = await getFeaturedProjectUseCase();
       </p>
       <div class="flex w-full items-center justify-center gap-2 overflow-x-hidden">
         {
-          TECH_STACKS.map(({ Logo, stackName, href }) => (
+          TECH_STACKS.map(({ Logo }) => (
             <div>
               <Logo className="size-6" />
             </div>
