fix: eslint errors and config

--- a/src/pages/projects/index.astro
+++ b/src/pages/projects/index.astro
@@ -63,7 +63,7 @@ const project = await getAllProjects();
         >
           <dialog
             id={imageKey}
-            class="dialog-animate peer max-w-5xl gap-4 rounded-md bg-transparent p-4 backdrop:bg-background/15 backdrop:backdrop-blur-sm"
+            class:list="dialog-animate peer max-w-5xl gap-4 rounded-md bg-transparent p-4 backdrop:bg-background/15 backdrop:backdrop-blur-sm"
           >
             <ProjectCard
               techstackArr={techStacks}
