--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -52,9 +52,11 @@ const project = await getFeaturedProjectUseCase();
   });
 </script>
 
+<!-- TODO: Fix the text in the image:
+  Must have a proper backdrop blur.,. try to find out smoothing the edge-->
 <Layout title="HomePage">
   <section class="flex size-full flex-col items-center gap-8 text-clip md:gap-4">
-    <article class="article-grid-template w-fit gap-4 py-4 sm:gap-y-0">
+    <article class:list="article-grid-template w-fit gap-4 py-4 sm:gap-y-0">
       <h1 class="text-3xl md:text-4xl">
         Hi, I am <strong class="block">Churchill Jay Sungcados</strong>
       </h1>
@@ -75,7 +77,7 @@ const project = await getFeaturedProjectUseCase();
       <Image src={profileImg} alt="profile picture for portfolio" class="w-5/6" />
     </article>
 
-    <aside class="grid-custom-template relative grid grow px-4">
+    <aside class:list="grid-custom-template relative grid grow px-4">
       <h2
         class:list={[
           "absolute bottom-[calc(100%-1rem)] md:bottom-[calc(100%-4rem)] lg:bottom-[calc(100%-3rem)] text-5xl md:text-7xl font-bold text-primary",
