--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -51,3 +51,4 @@ const { title, class: className, "class:list": cn } = Astro.props;
 </style>
 
 <!-- TODO: - [] update read me-->
+<!-- TODO: - [] update faveicon -->
