chore: added icon and updated read me

--- a/src/components/Layouts/Footer.astro
+++ b/src/components/Layouts/Footer.astro
@@ -22,7 +22,7 @@ const SOCIAL_LINKS = [
   },
   {
     name: "LinkedIn",
-    href: "https://www.linkedin.com/in/churchill-jay-sungcados-90b49a29a/",
+    href: "https://www.linkedin.com/in/churchillexe/",
     logo: LinkedIn,
     color: "#0A66C2",
   },
