chore: about page and footer update

--- a/src/components/Layouts/Footer.astro
+++ b/src/components/Layouts/Footer.astro
@@ -1,5 +1,11 @@
 ---
-import { FacebookIcon, GithubIcon, LinkedIn, TwitterIcon } from "@/components/svg/SocialIcons";
+import {
+  FacebookIcon,
+  Gmail,
+  GithubIcon,
+  LinkedIn,
+  TwitterIcon,
+} from "@/components/svg/SocialIcons";
 
 const SOCIAL_LINKS = [
   {
@@ -25,6 +31,12 @@ const SOCIAL_LINKS = [
     href: "https://www.linkedin.com/in/churchillexe/",
     logo: LinkedIn,
     color: "#0A66C2",
+  },
+  {
+    name: "Gmail",
+    href: "mailto:churchillexe@gmail.com",
+    logo: Gmail,
+    color: "#f43f5e",
   },
 ] as const;
 ---
